# proxy

./: .dockerignore  .env.example  .gitignore  .luacheckrc  .markdownlint.json  Dockerfile  Justfile  README.md  cloudflare-ips.sh  docker-compose.yml  docker-entrypoint.sh  nginx.conf  opentelemetry.toml
.github/workflows/: container.yml  lint.yml
conf/: default.conf  lua.conf  opentelemetry.conf
docker-entrypoint.d/: 10-remove-defaults.sh  15-stub-auth.envsh  20-envsubst-templates.sh  25-relocate-static.sh  30-tune-worker-processes.sh
echo/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
echo/echo/: app.py
hack/: clean-otel-env-vars.sh
lua/auth/: graphql.lua  oauth.lua
lua/modules/: dbg.lua  headers.lua  responses.lua  set.lua  subrequest.lua  tables.lua
lua/modules/auth/: init.lua  scope.lua  user.lua
lua/modules/opentelemetry/: init.lua  scrub.lua
lua/opentelemetry/: propagate.lua  proxy.lua
lua/opentelemetry/worker/: exit.lua  init.lua
lua/stubs/: auth.lua  scope.lua  user.lua
patches/opentelemetry-cpp/: trace-propagation-hex.patch
snippets/: auth.conf  not-found.conf  proxy.conf
snippets/auth/: scope.conf  user.conf
snippets/opentelemetry/: propagate.conf  proxy.conf
snippets/stubs/: auth.conf
snippets/stubs/auth/: scope.conf  user.conf
templates/: api.conf.template  resolver.conf.template  upstreams.conf.template
